Finished build stuff (still doc to do)

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ ACLOCAL_AMFLAGS = -I m4
 #
 # We have a lot of files that we want shipped with the distribution.
 #
-EXTRA_DIST = RELNOTES LICENSE configure.ac+lt re-conf \
+EXTRA_DIST = RELNOTES LICENSE configure.ac+lt config+lt \
 	     contrib/3.0b1-lease-convert contrib/dhclient-tz-exithook.sh \
 	     contrib/dhcp.spec contrib/sethostname.sh contrib/solaris.init \
 	     contrib/ms2isc/Registry.pm contrib/ms2isc/ms2isc.pl \
