--- a/util/Makefile.bind.in
+++ b/util/Makefile.bind.in
@@ -86,6 +86,7 @@ bind2:
 		echo Installing BIND libraries to ${binddir}. ;        \
 		for libdir in ${bindlibs} ; do                         \
 		 (cd ${bindsrcdir}/lib/$$libdir ;                      \
+		  export MAKEDEFS="${installdirs}";                    \
 		  $(MAKE) ${installdirs} install >>                    \
 		   ${binddir}/install.log) ;                           \
 		done ;                                                 \
