--- a/util/Makefile.bind.in
+++ b/util/Makefile.bind.in
@@ -98,8 +98,6 @@ clean:
 
 @INSTALL_BIND_FALSE@install:
 @INSTALL_BIND_TRUE@install: install-bind
-@INSTALL_BIND_FALSE@uninstall:
-@INSTALL_BIND_TRUE@uninstall: uninstall-bind
 
 install-bind: all
 	@for libdir in ${bindlibs} ; do   \
@@ -107,13 +105,7 @@ install-bind: all
 	  $(MAKE) install) ;              \
 	 done
 
-uninstall-bind: all
-	@for libdir in ${bindlibs} ; do   \
-	 (cd ${bindsrcdir}/lib/$$libdir ; \
-	  $(MAKE) uninstall) ;            \
-	 done
-
 # Include the following so that this Makefile is happy when the parent
 # tries to use them.
 
-check distdir distclean dvi installcheck:
+check distdir distclean dvi installcheck uninstall:
