--- a/includes/Makefile.am
+++ b/includes/Makefile.am
@@ -4,7 +4,7 @@ nobase_include_HEADERS = omapip/alloc.h omapip/buffer.h omapip/convert.h \
 			 isc-dhcp/dst.h
 
 EXTRA_DIST = cdefs.h ctrace.h dhcp.h dhcp6.h dhcpd.h dhctoken.h failover.h \
-	     heap.h inet.h minires.h osdep.h site.h statement.h tree.h \
+	     heap.h inet.h ns_name.h osdep.h site.h statement.h tree.h \
 	     t_api.h \
 	     ldap_casa.h ldap_krb_helper.h \
 	     arpa/nameser.h arpa/nameser_compat.h \
