[master] Added client_universe to dhclient
    Merges in rt46616.

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -9,7 +9,7 @@ AM_CPPFLAGS += -DLOCALSTATEDIR='"$(localstatedir)"'
 
 dist_sysconf_DATA = dhclient.conf.example
 sbin_PROGRAMS = dhclient
-dhclient_SOURCES = clparse.c dhclient.c dhc6.c \
+dhclient_SOURCES = client_tables.c clparse.c dhclient.c dhc6.c \
 		   scripts/bsdos scripts/freebsd scripts/linux scripts/macos \
 		   scripts/netbsd scripts/nextstep scripts/openbsd \
 		   scripts/solaris scripts/openwrt
