[v4_1_esv_r15_pl] Added unit tests for CVE patches     common/tests/Makefile.am     common/tests/option_unittest.c

--- a/common/tests/Makefile.am
+++ b/common/tests/Makefile.am
@@ -8,7 +8,7 @@ ATF_TESTS =
 
 if HAVE_ATF
 
-ATF_TESTS += alloc_unittest ns_name_unittest
+ATF_TESTS += alloc_unittest ns_name_unittest option_unittest
 
 alloc_unittest_SOURCES = test_alloc.c $(top_srcdir)/tests/t_api_dhcp.c
 alloc_unittest_LDADD = $(ATF_LDFLAGS)
@@ -18,6 +18,11 @@ alloc_unittest_LDADD += ../libdhcp.a  \
 ns_name_unittest_SOURCES = ns_name_test.c $(top_srcdir)/tests/t_api_dhcp.c
 ns_name_unittest_LDADD = $(ATF_LDFLAGS)
 ns_name_unittest_LDADD += ../libdhcp.a  \
+	../../omapip/libomapi.a ../../dst/libdst.a ../../minires/libres.a
+
+option_unittest_SOURCES = option_unittest.c $(top_srcdir)/tests/t_api_dhcp.c
+option_unittest_LDADD = $(ATF_LDFLAGS)
+option_unittest_LDADD += ../libdhcp.a  \
 	../../omapip/libomapi.a ../../dst/libdst.a ../../minires/libres.a
 
 check: $(ATF_TESTS)
