[v4_1_esv_r15_p1]  Updated auto-generated files for after unit tests added
modified:
	common/tests/Makefile.in

--- a/common/tests/Makefile.in
+++ b/common/tests/Makefile.in
@@ -87,7 +87,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@HAVE_ATF_TRUE@am__append_1 = alloc_unittest ns_name_unittest
+@HAVE_ATF_TRUE@am__append_1 = alloc_unittest ns_name_unittest option_unittest
 check_PROGRAMS = $(am__EXEEXT_2)
 subdir = common/tests
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -100,7 +100,8 @@ CONFIG_HEADER = $(top_builddir)/includes/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 @HAVE_ATF_TRUE@am__EXEEXT_1 = alloc_unittest$(EXEEXT) \
-@HAVE_ATF_TRUE@	ns_name_unittest$(EXEEXT)
+@HAVE_ATF_TRUE@	ns_name_unittest$(EXEEXT) \
+@HAVE_ATF_TRUE@	option_unittest$(EXEEXT)
 am__EXEEXT_2 = $(am__EXEEXT_1)
 am__alloc_unittest_SOURCES_DIST = test_alloc.c \
 	$(top_srcdir)/tests/t_api_dhcp.c
@@ -117,6 +118,14 @@ am__ns_name_unittest_SOURCES_DIST = ns_name_test.c \
 @HAVE_ATF_TRUE@	t_api_dhcp.$(OBJEXT)
 ns_name_unittest_OBJECTS = $(am_ns_name_unittest_OBJECTS)
 @HAVE_ATF_TRUE@ns_name_unittest_DEPENDENCIES = $(am__DEPENDENCIES_1) \
+@HAVE_ATF_TRUE@	../libdhcp.a ../../omapip/libomapi.a \
+@HAVE_ATF_TRUE@	../../dst/libdst.a ../../minires/libres.a
+am__option_unittest_SOURCES_DIST = option_unittest.c \
+	$(top_srcdir)/tests/t_api_dhcp.c
+@HAVE_ATF_TRUE@am_option_unittest_OBJECTS = option_unittest.$(OBJEXT) \
+@HAVE_ATF_TRUE@	t_api_dhcp.$(OBJEXT)
+option_unittest_OBJECTS = $(am_option_unittest_OBJECTS)
+@HAVE_ATF_TRUE@option_unittest_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 @HAVE_ATF_TRUE@	../libdhcp.a ../../omapip/libomapi.a \
 @HAVE_ATF_TRUE@	../../dst/libdst.a ../../minires/libres.a
 AM_V_P = $(am__v_P_@AM_V@)
@@ -151,9 +160,11 @@ AM_V_CCLD = $(am__v_CCLD_@AM_V@)
 am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
-SOURCES = $(alloc_unittest_SOURCES) $(ns_name_unittest_SOURCES)
+SOURCES = $(alloc_unittest_SOURCES) $(ns_name_unittest_SOURCES) \
+	$(option_unittest_SOURCES)
 DIST_SOURCES = $(am__alloc_unittest_SOURCES_DIST) \
-	$(am__ns_name_unittest_SOURCES_DIST)
+	$(am__ns_name_unittest_SOURCES_DIST) \
+	$(am__option_unittest_SOURCES_DIST)
 RECURSIVE_TARGETS = all-recursive check-recursive cscopelist-recursive \
 	ctags-recursive dvi-recursive html-recursive info-recursive \
 	install-data-recursive install-dvi-recursive \
@@ -337,6 +348,10 @@ ATF_TESTS = $(am__append_1)
 @HAVE_ATF_TRUE@ns_name_unittest_LDADD = $(ATF_LDFLAGS) ../libdhcp.a \
 @HAVE_ATF_TRUE@	../../omapip/libomapi.a ../../dst/libdst.a \
 @HAVE_ATF_TRUE@	../../minires/libres.a
+@HAVE_ATF_TRUE@option_unittest_SOURCES = option_unittest.c $(top_srcdir)/tests/t_api_dhcp.c
+@HAVE_ATF_TRUE@option_unittest_LDADD = $(ATF_LDFLAGS) ../libdhcp.a \
+@HAVE_ATF_TRUE@	../../omapip/libomapi.a ../../dst/libdst.a \
+@HAVE_ATF_TRUE@	../../minires/libres.a
 all: all-recursive
 
 .SUFFIXES:
@@ -382,6 +397,10 @@ ns_name_unittest$(EXEEXT): $(ns_name_unittest_OBJECTS) $(ns_name_unittest_DEPEND
 	@rm -f ns_name_unittest$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(ns_name_unittest_OBJECTS) $(ns_name_unittest_LDADD) $(LIBS)
 
+option_unittest$(EXEEXT): $(option_unittest_OBJECTS) $(option_unittest_DEPENDENCIES) $(EXTRA_option_unittest_DEPENDENCIES) 
+	@rm -f option_unittest$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(option_unittest_OBJECTS) $(option_unittest_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -389,6 +408,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ns_name_test.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/option_unittest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_api_dhcp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_alloc.Po@am__quote@
 
