[v4_1_esv_r15_p1] Updated .gitignore with option_unittest

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ client/tests/
 common/tests/alloc_unittest
 common/tests/dns_unittest
 common/tests/misc_unittest
+common/tests/option_unittest
 config.log
 config.report
 config.status
