[master] Pre-release tag prep for 4.4.1: version #, copyright etc...
Changes committed:
    modified:   .gitignore
	modified:   README
	modified:   RELNOTES
	modified:   configure
	modified:   configure.ac
	modified:   configure.ac+lt
	modified:   configure.ac-base
	modified:   configure.ac-lt
	modified:   util/bind.sh

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ common/tests/alloc_unittest
 common/tests/dns_unittest
 common/tests/misc_unittest
 common/tests/ns_name_unittest
+common/tests/option_unittest
 config.log
 config.report
 config.status
