--- a/Makefile.in
+++ b/Makefile.in
@@ -384,7 +384,8 @@ EXTRA_DIST = RELNOTES LICENSE configure.ac+lt config+lt \
 	doc/devel/mainpage.dox doc/devel/omapi.dox doc/devel/qa.dox \
 	client/tests/Atffile common/tests/Atffile server/tests/Atffile \
 	client/tests/Kyuafile common/tests/Kyuafile \
-	server/tests/Kyuafile m4/README $(am__append_1)
+	server/tests/Kyuafile m4/README CONTRIBUTING.md \
+	$(am__append_1)
 
 # Use an autoconf substitution vs an automake conditional here
 # to fool automake when the bind directory does not exist.
