[#71] Rework relay/tests Makefile.am
configure.ac
    - added relay/tests/Makefile.am

relay/tests/Makefile.am
    - reworked it for v4_1_esv

--- a/configure.ac
+++ b/configure.ac
@@ -659,6 +659,7 @@ AC_OUTPUT([
   minires/Makefile
   omapip/Makefile
   relay/Makefile
+  relay/tests/Makefile
   server/Makefile
   tests/Makefile
   tests/unittest.sh
