--- a/relay/tests/Makefile.am
+++ b/relay/tests/Makefile.am
@@ -1,10 +1,9 @@
 SUBDIRS = .
 
 AM_CPPFLAGS = $(ATF_CFLAGS) -DUNIT_TEST -I$(top_srcdir)/includes
-AM_CPPFLAGS += -I@BINDDIR@/include -I$(top_srcdir)
 AM_CPPFLAGS += -DLOCALSTATEDIR='"."'
 
-EXTRA_DIST = Atffile Kyuafile
+EXTRA_DIST = Atffile
 
 # for autotools debugging only
 info:
@@ -14,12 +13,9 @@ info:
 
 DHCPSRC = ../dhcrelay.c
 
-DHCPLIBS = $(top_builddir)/common/libdhcp.@A@ \
-	  $(top_builddir)/omapip/libomapi.@A@    \
-	  @BINDLIBIRSDIR@/libirs.@A@ \
-	  @BINDLIBDNSDIR@/libdns.@A@ \
-	  @BINDLIBISCCFGDIR@/libisccfg.@A@ \
-	  @BINDLIBISCDIR@/libisc.@A@
+DHCPLIBS = $(top_builddir)/common/libdhcp.a \
+	  $(top_builddir)/omapip/libomapi.a \
+	  $(top_builddir)/dst/libdst.a
 
 ATF_TESTS =
 if HAVE_ATF
@@ -35,13 +31,12 @@ relay_unittests_LDADD += $(DHCPLIBS)
 check: $(ATF_TESTS)
 	@if test $(top_srcdir) != ${top_builddir}; then \
 		cp $(top_srcdir)/relay/tests/Atffile Atffile; \
-		cp $(top_srcdir)/relay/tests/Kyuafile Kyuafile; \
 	fi
 	sh ${top_builddir}/tests/unittest.sh
 
 distclean-local:
 	@if test $(top_srcdir) != ${top_builddir}; then \
-		rm -f Atffile Kyuafile;
+		rm -f Atffile;
 	fi
 
 endif
