[#71] Update auto-generated files to accomodate relay unit tests
Changes to be committed:
configure
relay/Makefile.am
relay/Makefile.in
relay/tests/Makefile.am
relay/tests/Makefile.in

--- a/relay/tests/Makefile.am
+++ b/relay/tests/Makefile.am
@@ -15,7 +15,8 @@ DHCPSRC = ../dhcrelay.c
 
 DHCPLIBS = $(top_builddir)/common/libdhcp.a \
 	  $(top_builddir)/omapip/libomapi.a \
-	  $(top_builddir)/dst/libdst.a
+	  $(top_builddir)/dst/libdst.a \
+	  $(top_builddir)/minires/libres.a
 
 ATF_TESTS =
 if HAVE_ATF
