[(no branch, rebasing trofi/dhcp-master)] dhcp/bind: build bind1->atf->bind2 sequentially
All 3 steps are interdependent:
- bind1 unpacks bind source
- atf builds tests in it
- bind2 builds bind

Without the dependencies parallel build on -j16 fails as:

    $ make -j16 -l16
    Making all in ./bind
    make[1]: Entering directory '/build/dhcp-4.4.2-P1/bind'
    Building BIND libraries - this takes some time.
    bash: line 6: cd: /build/dhcp-4.4.2-P1/bind/bind-9.11.14/lib/isc: No such file or directory
    Building isc library in /build/dhcp-4.4.2-P1/bind
    bash: line 6: cd: /build/dhcp-4.4.2-P1/bind/bind-9.11.14/lib/isc: No such file or directory
    bash: ./configure: /bin/sh: bad interpreter: Text file busy
    make[2]: *** [Makefile:42: bind1] Error 126
    make[2]: *** Waiting for unfinished jobs....

--- a/bind/Makefile.in
+++ b/bind/Makefile.in
@@ -59,7 +59,7 @@ bind1:
                  ./configure ${bindconfig} > ${binddir}/configure.log); \
 	fi
 
-atf:
+atf: bind1
 # Build and copy the ATF support if not yet installed.
 	@if test -d ./atf ; then                      \
 		echo ATF support already installed ;  \
@@ -70,7 +70,8 @@ atf:
 		 cp -rp atf ${binddir}) ;             \
 	fi
 
-bind2:
+@BIND_ATF_TRUE@bind2: atf
+bind2: bind1
 # Build and install the libraries
 # No need to do anything if we already have something installed.
 	@if test -d ${binddir}/lib ; then                                 \
