--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ client/tests/duid_unittests
 client/tests/test-suite.log
 common/tests/alloc_unittest
 common/tests/dns_unittest
+common/tests/domain_name_unittest
 common/tests/misc_unittest
 common/tests/ns_name_unittest
 common/tests/option_unittest
@@ -24,6 +25,7 @@ libtool
 ltmain.sh
 omapip/svtest
 relay/dhcrelay
+relay/tests/relay_unittests
 server/dhcpd
 server/tests/dhcpd_unittests
 server/tests/hash_unittests
